# rust_ifs

./: .dockerignore  .gitignore  API.md  ARCHITECTURE-v4-lifecycle.md  ARCHITECTURE.md  BACKLOG.md  Cargo.toml  README.md  dev.sh  serve-https.sh
.github/workflows/: ci.yml  coordinator-image.yml  pages.yml  sheep-node-image.yml
attic/: README.md
attic/flame-render-wgpu/: Cargo.toml
attic/flame-render-wgpu/src/: compute.rs  lib.rs  main.rs  shaders.wgsl
attic/v1-p2p-client/: app.js  hall.html  index.html  net.js  sheep.html
coordinator/: Cargo.toml  Dockerfile  README.md
coordinator/deploy/: Caddyfile  DEPLOY.md  backup-accounts.sh  docker-compose.prebuilt.yml  docker-compose.yml  gallery.env  sandbox.env
coordinator/src/: audit.rs  auth.rs  db.rs  disk.rs  error.rs  ga.rs  ga_config.rs  histio.rs  main.rs  render.rs  routes.rs  spec.rs  state.rs  video.rs
coordinator/tests/: smoke.rs
crates/flame-cli/: Cargo.toml
crates/flame-cli/src/: main.rs
crates/flame-core/: Cargo.toml
crates/flame-core/src/: affine.rs  animate.rs  breed.rs  canonical.rs  chunked.rs  fmath.rs  genome.rs  interpolate.rs  lib.rs  palette.rs  palettes_lib.rs  render.rs  rng.rs  variations.rs
crates/flame-wasm/: Cargo.toml
crates/flame-wasm/src/: lib.rs
crates/sheep-node/: Cargo.toml
crates/sheep-node/deploy/: Caddyfile  DEPLOY.md  Dockerfile  docker-compose.prebuilt.yml  docker-compose.yml  gallery.env  sandbox.env
crates/sheep-node/examples/: time_derive.rs
crates/sheep-node/src/: accumulator.rs  block.rs  derive_minted_genesis.rs  engine.rs  hist.rs  http.rs  lib.rs  main.rs  net.rs  spec.rs  video.rs
crates/sheep-node/tests/: economy.rs  edge_cases.rs  engine.rs  http_watch.rs  http_write.rs  swarm_convergence.rs  swarm_tcp.rs  trust.rs  two_peer.rs
crates/sheep-proto/: Cargo.toml
crates/sheep-proto/src/: canonical.rs  derive.rs  envelope.rs  equivocation.rs  identity.rs  lib.rs  msg.rs  proto.rs
crates/sheep-proto/tests/: proto.rs
e2e/: determinism.mjs  fraud-debug.js  package-lock.json  package.json  probe2.mjs  probe3.mjs  probe422.mjs  run-determinism.sh  run-v3.sh  run.sh  stress2.mjs  test.js  v3.js
e2e/connectivity/: README.md  compose.yml  package-lock.json  package.json  peer.mjs  run.sh
relay/: Dockerfile  build.sh  docker-compose.yml  package-lock.json  package.json
relay/deploy/: Caddyfile  DEPLOY.md  docker-compose.yml
relay/src/: browser-entry.js  common.js  relay.js
relay/test/: roundtrip.js
src/: main.rs
stress/: .gitignore  README.md  package-lock.json  package.json  run.sh  swarm.js
stress/docker/: Caddyfile  compose.yml  isolated.yml  peer.mjs  run.sh
web/: CNAME  about.html  build.sh  config.js  determinism.html  hall.html  index.html  me.html  sheep.html  style.css  swarm.html
web/genomes/: 2f39ee827b21.json  6677b3b8d150.json  ab0255e2821e.json  b6055117137d.json  bcb81c93ab35.json  expected-hashes.txt  manifest.json  seed_11.json  seed_2.json  seed_23.json  seed_3.json  seed_31.json  seed_41.json  seed_42.json  seed_47.json  seed_5.json  seed_53.json  seed_7.json  seed_79.json  seed_9.json
web/js/: api.js  app.js  audit.js  contribute.js  gens.js  gpu.js  hash.js  identity.js  loop.js  names.js  net.js  pool.js  store.js  worker.js  world-picker.js
web/pkg/: flame_wasm.js  flame_wasm_bg.wasm
web/shaders/: flame.wgsl
