[workspace]
resolver = "2"
members = [
  "crates/flame-core",
  "crates/flame-cli",
  "crates/flame-wasm",
  "coordinator",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Bobby Plubell <bobbyplubell@gmail.com>"]
license = "MIT"

[workspace.dependencies]
flame-core = { path = "crates/flame-core" }

# Release renders should be fast.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
