[package]
name = "flame-render"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "GPU (wgpu) fractal-flame renderer: additive-point blending + tone-map pass. Native (Vulkan/Metal) and web (WebGPU) from one codebase."

[lib]
name = "flame_render"
path = "src/lib.rs"

[[bin]]
name = "flame-gpu"
path = "src/main.rs"

[dependencies]
flame-core = { workspace = true }
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"
png = "0.17"
wgpu = "29.0.3"
half = "2.7.1"
serde_json = "1.0.150"
