[package]
name = "flame-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "wasm-bindgen bindings exposing the flame-core renderer to the browser gallery."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
flame-core = { workspace = true }
wasm-bindgen = "0.2"
serde_json = "1"
console_error_panic_hook = "0.1"
