[package]
name = "sheep-node"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "proof-of-sheep v3 native node core: a PURE, libp2p-free, clock-injected state machine (engine) built on sheep-proto + flame-core. The networking layer wraps this."

[dependencies]
# The wire-protocol contract: Envelope, message bodies, derive rules, identity,
# equivocation. We build ON this; we never redefine its types.
sheep-proto = { path = "../sheep-proto" }

# The deterministic renderer: render_batch, batch_seed, hist_hash_hex, genomes.
flame-core = { workspace = true }

# Signing the node's own outbound envelopes.
ed25519-dalek = "2"

# Per-pass seed derivation (the §4 unbounded-density "pass" mixes into the
# render seed-id so each pass draws a distinct sample stream).
sha2 = "0.10"

# (De)serializing message bodies to/from the Envelope's serde_json::Value body.
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["float_roundtrip"] }

# Heavy-data layer: serialize+compress a tile histogram into PieceUpload.hist_b64
# in the SAME format coordinator/src/histio.rs decodes — base64(zlib-deflate of
# LE u64 histogram cells). Pinned to match the coordinator's versions.
base64 = "0.22"
flate2 = "1"
# Accept zstd-compressed pieces on decode too (the coordinator magic-sniffs it);
# the engine itself only ever emits zlib.
zstd = "0.13"

# ---- transport layer (this agent) ------------------------------------------
# The libp2p swarm wrapping the pure engine. Pinned to 0.56 (current stable).
# gossipsub: the topic fan-out for env.t; identify: capability/connect handshake;
# request-response (json codec): PIECE/ASSIGN stubs; tcp+noise+yamux: the real
# transport; macros: #[derive(NetworkBehaviour)]; tokio: the runtime driver.
# The in-memory transport (core::transport::MemoryTransport) needs no feature —
# it lives in libp2p-core and is what the two-peer test runs on (no real ports).
libp2p = { version = "0.56", features = [
    "gossipsub",
    "identify",
    "request-response",
    "json",
    "tcp",
    "noise",
    "yamux",
    "macros",
    "tokio",
] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "net"] }
futures = "0.3"

# ---- serve capability (the watch face, §1.1/§10) ---------------------------
# The read-only HTTP face: axum (same version + patterns as coordinator/), serving
# cacheable projections of the engine/accumulator state. Video tonemap → ffmpeg
# shell-out reuses the coordinator's encoder invocation (ported in src/video.rs).
axum = "0.7"

[dev-dependencies]
# In-process HTTP test client for the watch-face integration test.
reqwest = { version = "0.12", features = ["json"] }
