[package]
name = "sheep-proto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "proof-of-sheep v3 wire-protocol contract: signed envelope + canonical(), protocol-ID constants, message body types, the derive rules that pin the valid genome space, and per-key sequence / equivocation types. Pure types + serde, no networking."

[dependencies]
# Deterministic renderer: genomes, breed(), sheep_id(), the Rng + canonical JSON.
flame-core = { workspace = true }

# Serialization. float_roundtrip mirrors flame-core/coordinator: lossless float
# parse so canonical JSON stays byte-identical across the wire.
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["float_roundtrip"] }

# Signing/verification — match the coordinator's ed25519-dalek 2.x.
ed25519-dalek = "2"

# Hashing for sheep identity + minted-genome seed derivation.
sha2 = "0.10"
